updated layout fixed the horizontal scroll and create new file 2/28/2019

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,8 @@ body
 }
 .csidebar
 {
+	top: 0;
+	bottom: 0;
 		overflow-x: auto;
 		background-color: #01041b;
 		padding: 12px;
@@ -45,6 +47,7 @@ nav
 	position: absolute;
 	border-bottom: 1px solid white;
 	padding: 5px;
+	position: fixed;
 }
 nav h1
 {
